# ship

./: .gitignore  .mcp.json  .ship.toml  CLAUDE.md  Cargo.toml  README.md  SKILL.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  CONVENTION.md  DISCOVERIES.md  PROJECT.md
docs/ticket/: P001-phieu-standard.md  P002-obsidian-note.md  P003-obsidian-note-impl.md  P004-dogfood-ship-note.md  PHASE-1.md  TEMPLATE.md  TICKET_TEMPLATE.md
src/: config.rs  detect.rs  error.rs  main.rs  output.rs
src/canary/: command.rs  docker.rs  http.rs  mod.rs
src/deploy/: mod.rs
src/learn/: display.rs  mod.rs  store.rs
src/mcp/: server.rs  tools.rs
src/note/: mod.rs
src/pipeline/: changelog.rs  commit.rs  docs_gate.rs  mod.rs  pr.rs  preflight.rs  push.rs  review.rs  test.rs  version.rs
