[package]
name = "ship"
version = "0.1.0"
edition = "2024"
authors = ["aspelldenny"]
description = "Rust CLI for automated release workflow — test, commit, push, PR in one command"
license = "MIT"
repository = "https://github.com/aspelldenny/ship"
keywords = ["cli", "release", "deploy", "git", "automation"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Config
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Regex (commit parsing, stack detection)
regex = "1"

# Async (MCP server, watch mode)
tokio = { version = "1", features = ["macros", "rt", "signal", "time"] }

# HTTP (canary health checks — Phase 2)
# reqwest = { version = "0.12", features = ["json"] }

# MCP server
rmcp = { version = "0.8", features = ["server", "transport-io"] }
schemars = "1"

# Error handling
thiserror = "2"

# UUID (learnings ID)
uuid = { version = "1", features = ["v4"] }

# Filesystem watch (Phase 3)
# notify = "8"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"     # Optimize for size
